--- a/index.html
+++ b/index.html
@@ -20,4 +20,9 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 </head>
+
+<body>
+  type whatever the fuck you want
+</body>
+
 </html>
