--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 </head>
 
 <body>
-  I made this, entirely by myself, sike.
+  <div class="w3-panel w3-lefftbar w3-light grey">
+    <p><i>"To be or not to be."</i></p>
+    <p>William Shakespeare</p>
+  </div>
 </body>
 
 </html>
