--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
     <p><i>"To be or not to be."</i></p>
     <p>William Shakespeare</p>
   </div>
+  
+  <table class="w3-table-all">
+  <tr>
+    <th>Social media</th>
+    <th>Username</th>
+  </tr>
+  <tr>
+    <td>Instagram</td>
+    <td>Ryan.C.Houck</td>
+    
+  </tr>
+  </table>
 </body>
 
 </html>
