--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
 <head>
 <title>PineAppleKittens | Home</title>
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
