--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
   <tr>
     <td>Instagram</td>
     <td>Ryan.C.Houck</td>
+  <tr>
+    <td>Snapcht</td>
+    <td>Gnardawg97</td>
+  </tr>
+  <tr>
+    <td>Twitch</td>
+    <td>PineAppleKittens</td>
+  </tr>
     
   </tr>
   </table>
