--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="w3-panel w3-leftbar w3-light grey">
+  <div class="w3-panel w3-leftbar w3-light-grey">
     <p><i>"To be or not to be."</i></p>
     <p>William Shakespeare</p>
   </div>
