--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>PineAppleKittens | Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css"/>
+  <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
 </head>
 
