--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <td>Instagram</td>
     <td>Ryan.C.Houck</td>
   <tr>
-    <td>Snapcht</td>
+    <td>Snapchat</td>
     <td>GnarDawg97</td>
   </tr>
   <tr>
